Fixed the scrollspy alignment.

--- a/BigFont/assets-90/site/less/bigfont.less
+++ b/BigFont/assets-90/site/less/bigfont.less
@@ -42,7 +42,14 @@ section
 		h1, h2, h3, h4, h5, h6
 		{
 			color:#40506A;	
-		}		
+		}
+		h1
+		{
+			// for subnav alignment
+			// nice-to-have
+			position:relative;
+			bottom:2.5px;
+		}
 	}
 	dl
 	{    		
@@ -70,6 +77,12 @@ aside.headshot-etc
 		margin-top:10px;
 	}
 }
+footer
+{
+	// for subnav alignment
+	// nice-to-have
+    min-height:41px;
+    }
 
 // navigation
 // --------------------------
